fixed overflow with hidden

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ nav a:focus{
   /* Requirement 4 code here -- Do not remove this comment. */
 .intro{
   /* background-image: url('/images/header.jpg'); */
-  background-image: url('https://joymeng-umich.github.io/hw4-2023/images/header.jpg');
+  background-image: url('../images/header.jpg');
   background-color: #858585;
 
   min-height: 400px;
@@ -54,7 +54,7 @@ nav a:focus{
   /* Requirement 6 code here -- Do not remove this comment. */
 img{
   width:100%;
-  overflow: visible;
+
 }
 
   /* Requirement 7 code here -- Do not remove this comment. */
@@ -68,21 +68,21 @@ img{
 
 .about, .about-image{
   grid-row: 1;
-  overflow: visible;
+
 }
 
 .clients, .clients-image{
   grid-row: 2;
-  overflow: visible;
+
 }
 
 .method, .method-image{
   grid-row: 3;
-  overflow: visible;
+
 }
 .contact, .contact-image{
   grid-row: 4;
-  overflow: visible;
+
 }
 
   /* Requirement 9 code here -- Do not remove this comment. */
@@ -137,6 +137,9 @@ img{
   /* Requirement 15 code here -- Do not remove this comment. */
   img{
     max-width: 600px;
+  }
+  .about-image, .method-image, .clients-image, .contact-image{
+    overflow: hidden;
   }
 }
 
